--- a/03-02-MoveShape-v2/XamarinMoveShape/XamarinMoveShape.UWP/XamarinMoveShape.UWP.csproj
+++ b/03-02-MoveShape-v2/XamarinMoveShape/XamarinMoveShape.UWP/XamarinMoveShape.UWP.csproj
@@ -139,6 +139,7 @@
       <Name>XamarinMoveShape</Name>
     </ProjectReference>
   </ItemGroup>
+  <Import Project="..\..\Xamarin.SignalRClient\Xamarin.SignalRClient.projitems" Label="Shared" />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
