--- a/03-02-MoveShape-v2/XamarinMoveShape/XamarinMoveShape/XamarinMoveShape.csproj
+++ b/03-02-MoveShape-v2/XamarinMoveShape/XamarinMoveShape/XamarinMoveShape.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Helpers\MessengingCenterAlert.cs" />
     <Compile Include="Helpers\ObservableObject.cs" />
     <Compile Include="Helpers\ObservableRangeCollection.cs" />
+    <Compile Include="Models\Location.cs" />
     <Compile Include="Models\BaseDataObject.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
