--- a/03-02-MoveShape-v2/XamarinMoveShape/XamarinMoveShape.Android/packages.config
+++ b/03-02-MoveShape-v2/XamarinMoveShape/XamarinMoveShape.Android/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.SignalR.Client" version="2.2.2" targetFramework="monoandroid71" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid71" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid71" />
